link, absolute url update

--- a/miu-study/cs472-WAP/w1d2recipe/pie.html
+++ b/miu-study/cs472-WAP/w1d2recipe/pie.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">       
         <h1 id="pageHead"><span>Grandma's Lemon Meringue Pie</span></h1>
-        <img src="image/pie.jpg" alt="lemon meringue pie">
+        <img src="https://tsulai.github.io/miu-study/cs472-WAP/w1d2recipe/image/pie.jpg" alt="lemon meringue pie">
         <p>
             One 9-inch pie<br />
             30 Min - Prep time<br/>
@@ -85,14 +85,14 @@
         </blockquote>
         <h2><span>LINKS</span></h2>
         <a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&amp;start=10"><strong>Search for other lemon meringue pie recipes</strong></a><br>
-        <a href="index.html"><strong>Home</strong></a>
+        <a href="../index.html"><strong>Home</strong></a>
         <pre>
 Copyright &copy; 2012 Granny's Pies
     A Granny's Pies Production     
            All rights reserved</pre>
         <a href="http://validator.w3.org/check?uri=https://tsulai.github.io/miu-study/cs472-WAP/w1d2recipe/pie.html">
             <img src="../image/w3c-html.png" alt="Valid HTML5">
-        </a><a href="http://jigsaw.w3.org/css-validator/validator?uri=https://tsulai.github.io/miu-study/cs472-WAP/w1d2recipe/receipe.css">
+        </a><a href="http://jigsaw.w3.org/css-validator/validator?uri=https://tsulai.github.io/miu-study/cs472-WAP/w1d2recipe/recipe.css">
             <img src="../image/w3c-css.png" alt="Valid CSS">
         </a>
     </div>
