comment added for extra feature

--- a/miu-study/cs472-WAP/w1d2recipe/pie.html
+++ b/miu-study/cs472-WAP/w1d2recipe/pie.html
@@ -9,6 +9,7 @@
     <link href="image/pie_icon.gif" rel="shortcut icon" />    
 </head>
 <body>
+    <!-- Extra Feature Added - Making page layout centralised with CSS -->
     <div class="wrapper">       
         <h1 id="pageHead"><span>Grandma's Lemon Meringue Pie</span></h1>
         <img src="https://tsulai.github.io/miu-study/cs472-WAP/w1d2recipe/image/pie.jpg" alt="lemon meringue pie">
