--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -24,6 +24,9 @@
                     href="http://validator.w3.org/check?uri=https://tsulai.github.io/miu-study/cs472-WAP/index.html"> <img
                     src="image/w3c-html.png"
                     alt="html validator"/></a>
+                    <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://tsulai.github.io/miu-study/cs472-WAP/css/main.css">
+                        <img src="image/w3c-css.png" alt="css validator">
+                    </a> 
             </div>        
             <div class = "rgtBox">
                 <h2>Hello & Welcome!</h2>
