remove strong,em, via css

--- a/miu-study/cs472-WAP/w1d2recipe/pie.html
+++ b/miu-study/cs472-WAP/w1d2recipe/pie.html
@@ -40,8 +40,8 @@
         <hr/>
         <h2><span>DIRECTIONS</span></h2>
         <ol>
-            <li><strong>Preheat Oven:</strong> Preheat oven to 350 degrees F (175 degrees C).</li>
-            <li><strong>Make Lemon Filling:</strong> In a medium saucepan ...
+            <li><span class="pop-txt">Preheat Oven:</span> Preheat oven to 350 degrees F (175 degrees C).</li>
+            <li><span class="pop-txt">Make Lemon Filling:</span> In a medium saucepan ...
                 <ul>
                     <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
                     <li>Stir in water, lemon juice and lemon zest.</li>
@@ -54,19 +54,19 @@
                     <li>Pour filling into baked pastry shell.</li>
                 </ul>
             </li>
-            <li><strong>Make Meringue:</strong> In a large glass or metal bowl ...
+            <li><span class="pop-txt">Make Meringue:</span> In a large glass or metal bowl ...
                 <ul>
                     <li>Whip egg whites until foamy.</li>
                     <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
                     <li>Spread meringue over pie, sealing the edges at the crust.</li>
                 </ul>
             </li>
-            <li><strong>Bake:</strong> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
+            <li><span class="pop-txt">Bake:</span> Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
         </ol>
         <p>
             This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's
             favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of
-            <del>cake</del> <ins>pie</ins>!
+            <span class="del-line">cake</span> pie!
         </p>
         <hr/>
         <h2><span>USER COMMENTS</span></h2>
@@ -81,14 +81,14 @@
             - Vickie K.
         </blockquote>
         <blockquote>
-            This site can really <strong>engage</strong> my interest. Follow the recipe above and <strong>make it so!</strong> This pie is <strong>number one.</strong>
+            This site can really <span class="pop-txt">engage</span> my interest. Follow the recipe above and <span class="pop-txt">make it so!</span> This pie is <span class="pop-txt">number one.</span>
             <br/>
             <br/>
             - Jean-Luc Piecard
         </blockquote>
         <h2><span>LINKS</span></h2>
-        <a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&amp;start=10"><strong>Search for other lemon meringue pie recipes</strong></a><br>
-        <a href="../index.html"><strong>Home</strong></a>
+        <a href="http://www.google.com/search?q=lemon+meringue+pie+recipe&amp;start=10"><span class="pop-txt">Search for other lemon meringue pie recipes</span></a><br>
+        <a href="../index.html"><span class="pop-txt">Home</span></a>
         <pre>
 Copyright &copy; 2012 Granny's Pies
     A Granny's Pies Production     
