added comment in files

--- a/miu-study/cs472-WAP/about.html
+++ b/miu-study/cs472-WAP/about.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!--Su Lai Myint - 613735 -->
+    <!--W1D3 Assignment 2 Lab02 About Page-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
