--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!--Su Lai Myint - 613735 -->
+    <!--W1D1 Assignment 1 Home Page-->
 <head>
     <title>Welcome : Su Lai Myint</title>
     <meta name="referrer" content="origin">
