--- a/miu-study/cs472-WAP/w1d2recipe/pie.html
+++ b/miu-study/cs472-WAP/w1d2recipe/pie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <!--Su Lai Myint - 613735 -->
-    <!--W1D3 Recipe Lab-->
+    <!--W1D3 Assignment 2 Recipe Lab-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
