--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -42,7 +42,7 @@
                         <li><a href="index.html" >W1D1 - Home Page</a></li>
                         <li><a href="about.html">W1D3 - About Me</a></li>
                         <li><a href="w1d2recipe/pie.html">W1D3 - Grandma's Lemon Meringue Pie</a></li>
-                        <li><a>W1D4 - Movie Review</a></li>
+                        <li><a href="w1d4movie/movie.html">W1D4 - Movie Review</a></li>
                         <li><a>W1D5 - Grades Exerciese</a></li>      
                         
                     </ul>
