float issue fixed with overflow

--- a/miu-study/cs472-WAP/w1d4movie/movie.html
+++ b/miu-study/cs472-WAP/w1d4movie/movie.html
@@ -12,6 +12,7 @@
 		-Therefore, the actual content area inside is 800-8 = 792px.
 		-So the two content areas' grid area become 546px & 246px; instead of 550px & 250 stated in pdf.
 		-grid feature is amazing compare to float.
+		-I had issue with img float, it is valuable knowledge learned from lecture that it can fixed with overflow:hiddedn
 	-->
 	<head>
 		<title>TMNT - Rancid Tomatoes</title>
@@ -48,7 +49,6 @@
 								Peter Debruge <br />
 								<span class="publication">Variety</span>
 							</p>
-
 							<p class="qbox">
 								<img src="images/fresh.gif" alt="Fresh" />
 								<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
@@ -58,10 +58,9 @@
 								Todd Gilchrist <br />
 								<span class="publication">IGN Movies</span>
 							</p>
-
-							<p class="qbox">
+							<p class="qbox">							
 								<img src="images/rotten.gif" alt="Rotten" />
-								<q>It stinks!</q>
+								<q>It stinks!</q>						
 							</p>
 							<p class="reviewer">
 								<img src="images/critic.gif" alt="Critic" />
