--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -39,12 +39,12 @@
 
                 <div>
                     <ul>
-                        <li><a href="index.html" >W1D1 - Home Page</a></li>
-                        <li><a href="about.html">W1D3 - About Me</a></li>
-                        <li><a href="w1d2recipe/pie.html">W1D3 - Grandma's Lemon Meringue Pie</a></li>
-                        <li><a href="w1d4movie/movie.html">W1D4 - Movie Review</a></li>
-                        <li><a>W1D5 - Grades Exerciese</a></li>      
-                        
+                        <li><a href="index.html" >W1D1 - Assignment 1 - Home Page</a></li>
+                        <li><a href="about.html">W1D3 - Assignment 2 - About Me</a></li>
+                        <li><a href="w1d2recipe/pie.html">W1D3 - Assignment 2 - Grandma's Lemon Meringue Pie</a></li>
+                        <li><a href="w1d4movie/movie.html">W1D4 - Assignment 3 - Movie Review</a></li>
+                        <li><a href="w1d5form/webform1.html">W1D5 - Assignment 4 - Web Form 1</a></li>      
+                        <li><a href="w1d5form/webform2.html">W1D5 - Assignment 4 - Web Form 2</a></li>    
                     </ul>
                 </div>
             </div>                           
