web form 2 btn grp update

--- a/miu-study/cs472-WAP/w1d5form/webform2.html
+++ b/miu-study/cs472-WAP/w1d5form/webform2.html
@@ -80,12 +80,14 @@
                         <label for="InputDateSupplied">Date supplied</label>
                         <input type="text" class="form-control" id="InputQStock" placeholder="yyyy-mm-dd">
                         <span class="input-note">Enter a valid Date.</span>
-                    </div>
-                    <div class="miu-btn-grp">
-                        <button type="button" class="btn miu-btn-reset">Reset</button>
-                        <button type="button" class="btn btn-outline-warning">Cancel</button>
-                        <button type="button" class="btn btn-outline-info">Add Product</button>
-                    </div>
+                    </div>                    
+                </div>
+            </div>
+            <div class="row">
+                <div class="miu-btn-grp">
+                    <button type="button" class="btn miu-btn-reset">Reset</button>
+                    <button type="button" class="btn btn-outline-warning">Cancel</button>
+                    <button type="button" class="btn btn-outline-info">Add Product</button>
                 </div>
             </div>
         </form>
