--- a/miu-study/lab-assignment5/webform1.html
+++ b/miu-study/lab-assignment5/webform1.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!--Su Lai Myint - 613735 -->
-    <!--Lab Assignment 5 - Intro to Javascript - Practice JS Coding Exercise Problems-->
-    <!---->
+    <!-- Su Lai Myint - 613735 -->
+    <!-- Lab Assignment 5 - Intro to Javascript - Practice JS Coding Exercise Problems-->
+    <!-- Q.13 Login Form-->
+    <!-- Adding JS code to login form when submitting the form-->
     <!-- Status Comment -->
     <!--
-      
+      - UnObstrusive JS Code
     -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Form 1</title>
+    <title>Web Form 1 - Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/webform1.css" rel="stylesheet" />
+    <script defer src="webform1.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="form1" class="container">
-        <form onsubmit="showData();return false;" >
+        <form id="FRMLogin"  >
             <div class="form-group">
               <label for="InputEmail">Email address</label>
               <input type="email" class="form-control" id="InputEmail" placeholder="Enter email">
@@ -40,18 +42,5 @@
           </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-      'use strict'
-      var showData = function(){
-        const em = document.getElementById('InputEmail').value;
-        const pw = document.getElementById('InputPassword').value;
-        const url = document.getElementById('InputURL').value;
-        const chk = document.getElementById('ChkMeOut').checked;        
-        console.log(em);
-        console.log(pw);
-        console.log(url);
-        console.log(chk);
-      }
-    </script>
   </body>
 </html>
