--- a/miu-study/lab-assignment5/webform2.html
+++ b/miu-study/lab-assignment5/webform2.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!--Su Lai Myint - 613735 -->
-    <!--Lab Assignment 5 - Intro to Javascript - Practice JS Coding Exercise Problems-->
-    <!---->
+    <!-- Su Lai Myint - 613735 -->
+    <!-- Lab Assignment 5 - Intro to Javascript - Practice JS Coding Exercise Problems-->
+    <!-- Q.13 New Product Form-->
+    <!-- Adding JS code to New Product form when submitting the form-->
     <!-- Status Comment -->
     <!--
-      
+      - UnObstrusive JS Code
     -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Web Form 2</title>
+    <title>Web Form 2 - Add New Product</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/navbar-fixed/">
+    
     <link href="css/webform2.css" rel="stylesheet" />
 </head>
 <body>
@@ -66,7 +67,7 @@
                     </div>
                     <div class="form-group">
                         <label for="InputSupplier">Supplier:</label>
-                        <select name="Supplier" id="SelSupplier" >
+                        <select name="Supplier" id="SelSupplier" required>
                             <option value="Select a supplier">Select a supplier</option>
                             <option value="volvo">Volvo</option>
                             <option value="saab">Saab</option>
