--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -43,8 +43,21 @@
                         <li><a href="about.html">W1D3 - Assignment 2 - About Me</a></li>
                         <li><a href="w1d2recipe/pie.html">W1D3 - Assignment 2 - Grandma's Lemon Meringue Pie</a></li>
                         <li><a href="w1d4movie/movie.html">W1D4 - Assignment 3 - Movie Review</a></li>
-                        <li><a href="w1d5form/webform1.html">W1D5 - Assignment 4 - Web Form 1</a></li>      
-                        <li><a href="w1d5form/webform2.html">W1D5 - Assignment 4 - Web Form 2</a></li>    
+                        <li>W1D5 - Assignment 4
+                            <ul>
+                                <li><a href="w1d5form/webform1.html">Web Form 1 - Login Form</a></li>      
+                                <li><a href="w1d5form/webform2.html">Web Form 2 -  New Product Form</a></li> 
+                            </ul>
+                        </li>
+                        <li>Lab Assignment 5 - Practice JS Coding Exercise Problems
+                            <ul>
+                                <li><a href="lab-assignment5/index.html">Javascript Functions</a></li>      
+                                <li><a href="lab-assignment5/webform1.html">Web Form 1 - Login Form</a></li> 
+                                <li><a href="lab-assignment5/webform2.html">Web Form 2 - New Product Form</a></li> 
+                                <li><a href="lab-assignment5/clock.html">Ticking Clock Counter</a></li> 
+                            </ul>
+                        </li>
+                           
                     </ul>
                 </div>
             </div>                           
