--- a/miu-study/cs472-WAP/lab-assignment5/index.html
+++ b/miu-study/cs472-WAP/lab-assignment5/index.html
@@ -18,6 +18,7 @@
     
     <h3><a href="webform1.html">Check Q.13 Login Form</a></h3>
     <h3><a href="webform2.html">Check Q.13 New Product Form</a></h3>
+    <h3><a href="clock.html">Check Q.15 Displays a working, ticking counter Clock</a></h3>
 
 </body>
 </html>
