--- a/miu-study/cs472-WAP/lab-assignment5/clock.html
+++ b/miu-study/cs472-WAP/lab-assignment5/clock.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Su Lai Myint - 613735 -->
+    <!-- Lab Assignment 5 - Intro to Javascript - Practice JS Coding Exercise Problems-->
+    <!-- Q.15 Displays a working, ticking counter Clock-->
+    <!-- Status Comment -->
+    <!--
+      - UnObstrusive JS Code
+    -->
 <head>
+    <title>Ticking Clock</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Ticking Clock</title>
+    <script defer src="clock.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="container">
-
+        <h1 id="txtDTNow"></h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
