--- a/miu-study/cs472-WAP/lab-assignment5/webform2.html
+++ b/miu-study/cs472-WAP/lab-assignment5/webform2.html
@@ -7,6 +7,8 @@
     <!-- Status Comment -->
     <!--
       - UnObstrusive JS Code
+      - html5 input date is not supported in firefox and safari
+      - But I have added here to test of js and DOM binding event
     -->
 <head>
     <meta charset="UTF-8">
@@ -14,8 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Web Form 2 - Add New Product</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
     <link href="css/webform2.css" rel="stylesheet" />
+    <script defer src="webform2.js" type="text/javascript"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-blue fixed-top">
@@ -44,31 +46,31 @@
         <div class="row">
             <h4>New Product Form</h4>
         </div>
-        <form onsubmit="showData();return false">
+        <form id="FRMNewProduct">
             <div class="row">
                 <div class="col">
                     <div class="form-group">
                         <label for="InputProductNum">Product Number</label>
-                        <input type="text" class="form-control" id="InputProductNum" placeholder="">
+                        <input type="text" class="form-control" id="InputProductNum" required placeholder="">
                     </div>
                     <div class="form-group">
                         <label for="InputName">Name</label>
-                        <input type="text" class="form-control" id="InputName" placeholder="">
+                        <input type="text" class="form-control" id="InputName" required placeholder="">
                     </div>
                     <div class="form-group">
                         <label for="InputUPrice">Unit Price</label>
-                        <input type="text" class="form-control" id="InputUPrice" placeholder="0.0">
+                        <input type="text" class="form-control" id="InputUPrice" required placeholder="0.0" pattern="\d+\.\d+">
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
                         <label for="InputQStock">Quantity in stock</label>
-                        <input type="text" class="form-control" id="InputQStock" placeholder="0">
+                        <input type="text" class="form-control" id="InputQStock" required placeholder="0" pattern="\d*">
                     </div>
                     <div class="form-group">
                         <label for="InputSupplier">Supplier:</label>
                         <select name="Supplier" id="SelSupplier" required>
-                            <option value="Select a supplier">Select a supplier</option>
+                            <option value="">Select a supplier</option>
                             <option value="volvo">Volvo</option>
                             <option value="saab">Saab</option>
                             <option value="mercedes">Mercedes</option>
@@ -77,8 +79,11 @@
                     </div>
                     <div class="form-group">
                         <label for="InputDateSupplied">Date supplied</label>
-                        <input type="text" class="form-control" id="InputDateSupplied" placeholder="yyyy-mm-dd">
-                        <span class="input-note">Enter a valid Date.</span>
+                        <div class="date-cnt">                          
+                          <input type="date"  class="form-control date-hdn" id="HdnInputDateSupplied" min="1997-01-01" max="2030-12-31" placeholder="yyyy-mm-dd" value="">
+                          <input type="text" class="form-control" required id="InputDateSupplied" placeholder="yyyy-mm-dd" pattern="^\d{4}-\d{2}-\d{2}$">
+                          <span class="input-note">Enter a valid Date.</span>                          
+                        </div>
                     </div>                    
                 </div>
             </div>
@@ -93,17 +98,5 @@
        
     </div>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-        'use strict'
-        var showData = function(){
-          const pn = document.getElementById('InputProductNum').value;
-          const nm = document.getElementById('InputName').value;
-          const up = document.getElementById('InputUPrice').value;
-          const qty = document.getElementById('InputQStock').value;  
-          const sp = document.getElementById('SelSupplier').value;
-          const date = document.getElementById('InputDateSupplied').value;      
-          window.alert(pn + '\n' + nm + '\n' + up + '\n' + qty + '\n' + sp + '\n' + date);
-        }
-      </script>
-</body>
+  </body>
 </html>
