--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -42,8 +42,8 @@
                         <li><a href="index.html" >W1D1 - Assignment 1 - Home Page</a></li>
                         <li><a href="about.html">W1D3 - Assignment 2 - About Me</a></li>
                         <li><a href="w1d2recipe/pie.html">W1D3 - Assignment 2 - Grandma's Lemon Meringue Pie</a></li>
-                        <li><a href="w1d4movie/movie.html">W1D4 - Assignment 3 - Movie Review</a></li>
-                        <li>W1D5 - Assignment 4
+                        <li><a href="w1d4movie/movie.html">W1D4 - Assignment 3 - CSS Layouts Movie Review</a></li>
+                        <li>W1D5 - Assignment 4 - HTML Forms and RegEx 
                             <ul>
                                 <li><a href="w1d5form/webform1.html">Web Form 1 - Login Form</a></li>      
                                 <li><a href="w1d5form/webform2.html">Web Form 2 -  New Product Form</a></li> 
