--- a/miu-study/cs472-WAP/w1d5form/webform1.html
+++ b/miu-study/cs472-WAP/w1d5form/webform1.html
@@ -22,7 +22,7 @@
         <form method="get">
             <div class="form-group">
               <label for="InputEmail">Email address</label>
-              <input type="email" class="form-control" id="InputEmail" placeholder="Enter email">
+              <input type="email" class="form-control" id="InputEmail" placeholder="Enter email" required pattern="[a-z0-9._+\-]+@[a-z0-9.\-]+\.[a-z]{2,3}" >
               <span class="email-note">We'll never share your email with anyone else.</span>
             </div>
             <div class="form-group">
