--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -57,7 +57,15 @@
                                 <li><a href="lab-assignment5/clock.html">Ticking Clock Counter</a></li> 
                             </ul>
                         </li>
-                           
+                        <li><a href="assignment 7/W2D1-Scopes-Closures-in-JS_Q1-Q5_SuLaiMyint.pdf">Assignment 7 - W2D3 - Scopes, Closures Practice Exercises</a></li>
+                        <li>Assignment 8 - W3D1 - Objects, Modules Practice Exercises
+                            <ul>
+                                <li><a href="assignment8/q6nq7.html">Q6 & Q7</a></li>      
+                                <li><a href="assignment8/q8nq9.html">Q8 & Q9</a></li> 
+                                <li><a href="assignment8/q10.html">Q10</a></li> 
+                                <li><a href="assignment8/q11.html">Q11</a></li> 
+                            </ul>
+                        </li> 
                     </ul>
                 </div>
             </div>                           
