--- a/miu-study/cs472-WAP/assignment8/q10.html
+++ b/miu-study/cs472-WAP/assignment8/q10.html
@@ -13,46 +13,51 @@
     <h4>Q10. - Check console for the output. Check <a href="js/q10.js">q10.js</a></h4></h4>
     <div class="box">
         <pre>
-            'use strict'
+    'use strict'
 
-            const Employee = (function(){
-                let name, age, salary;
-                const setAge = function(newAge){
-                    age = newAge;
-                }
-                const setSalary = function(newSalary){
-                    salary = newSalary;
-                }
-                const setName = function(newName){
-                    name = newName;
-                }
-                const getAge = function(){
-                    return age;
-                }
-                const getSalary = function(){
-                    return salary;
-                }
-                const getName = function(){
-                    return name;
-                }
-                const increaseSalary = function(percentage){
-                    salary += getSalary() + (getSalary() * percentage)
-                }
-                const incrementAge = function(){
-                    this.setAge(this.getAge + 1);
-                }
-                return {
-                    setAge: setAge,
-                    setSalary: setSalary,
-                    setName: setName,
-                    increaseSalary: increaseSalary,
-                    incrementAge: incrementAge
-                }
-            })();
-            Employee.setName("Su Lai");
-            Employee.setAge("35");
-            Employee.setSalary("550000");
-            console.log(Employee);
+    const Employee = (function(){
+        let name = '', age = 0, salary = 0;
+        
+        function getAge(){
+            age += 1;        
+            console.log('incrementAge: ' + age);
+        }
+        function getSalary(percentage){
+            salary += salary + (salary * percentage/100);
+            console.log('increseSalary('+ percentage +'):' + salary);
+        }
+        function getName(){
+            console.log('getName: ' + name);
+        }   
+        return {
+            setAge: function(newAge){
+                age = newAge;
+                console.log('setAge('+newAge +'): ' + age);
+            },
+            setSalary: function(newSalary){
+                salary = newSalary;
+                console.log('setSalary: ' + salary);
+            },
+            setName: function(newName){
+                name = newName;
+                console.log('setName: ' + name);
+            },
+            increaseSalary: function(percentage){
+                getSalary(percentage);
+            },
+            incrementAge: function(){
+                getAge();
+            }
+        }
+    })();
+    Employee.setName("Su Lai");
+    Employee.setAge(35);
+    Employee.setSalary(550000);
+
+    Employee.incrementAge();
+    Employee.increaseSalary(10);
+
+    console.log(Employee);
         </pre>
     </div>
     <script src="js/q10.js" type="text/javascript"></script>
