--- a/miu-study/cs472-WAP/assignment9/q1.html
+++ b/miu-study/cs472-WAP/assignment9/q1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 9 - Q1</title>
+    <link href="../assignment8/css/main.css" rel="stylesheet" />
 </head>
 <body>
     <h1>Assignment 9 - W3D2 - Using Inheritance</h1>
@@ -13,5 +14,6 @@
         <pre>
         </pre>
     </div>
+    <script src="q1.js" type="text/javascript"></script>
 </body>
 </html>
