assgn 8 updates & assgn 9 all upload

--- a/miu-study/cs472-WAP/assignment8/q10.html
+++ b/miu-study/cs472-WAP/assignment8/q10.html
@@ -13,6 +13,11 @@
     <h4>Q10. - Check console for the output. Check <a href="js/q10.js">q10.js</a></h4></h4>
     <div class="box">
         <pre>
+        /* Assignment 8 - W3D1 - Objects, Modules Practice Exercises
+        * Q10
+        * Create Employee Object with Revealing Module Pattern
+        */
+        
         'use strict'
 
         const Employee = (function(){
