--- a/miu-study/cs472-WAP/assignment8/q11.html
+++ b/miu-study/cs472-WAP/assignment8/q11.html
@@ -13,7 +13,13 @@
     <h4>Q11. - Check console for the output. Check <a href="js/q11.js">q11.js</a></h4></h4>
     <div class="box">
         <pre>
+    /* Assignment 8 - W3D1 - Objects, Modules Practice Exercises
+    * Q11
+    * Extend Employee Object - Module Extension
+    */
+
     'use strict'
+    
     Employee.extension = (function(){    
         return {
             address : null,
