--- a/miu-study/cs472-WAP/assignment8/q6nq7.html
+++ b/miu-study/cs472-WAP/assignment8/q6nq7.html
@@ -13,7 +13,14 @@
     <h4>Q6. - Check console for the output. Check <a href="js/q6.js">q6.js</a></h4>
     <div class="box">
         <pre>
+    /* Assignment 8 - W3D1 - Objects, Modules Practice Exercises
+    * Q6
+    * Modify module into count object with add() and reset() 
+    * revealing module
+    */
+
     'use strict'
+    
     const count = (function(){
         let counter = 0;
         const add = function(){
