--- a/miu-study/cs472-WAP/assignment8/q8nq9.html
+++ b/miu-study/cs472-WAP/assignment8/q8nq9.html
@@ -13,6 +13,12 @@
     <h4>Q8. - Check console for the output. Check <a href="js/q8.js">q8.js</a></h4></h4>
     <div class="box">
         <pre>
+    /* Assignment 8 - W3D1 - Objects, Modules Practice Exercises
+    * Q8
+    * Make_adder function whose return value is add function with increment value inc
+    * Module factory
+    */
+    
     'use strict'
 
     const make_adder = function(inc){
