--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -65,6 +65,13 @@
                                 <li><a href="assignment8/q10.html">Q10</a></li> 
                                 <li><a href="assignment8/q11.html">Q11</a></li> 
                             </ul>
+                        </li>
+                        <li>Assignment 9 - W3D2 - Using Inheritance
+                            <ul>
+                                <li><a href="assignment9/q1.html">Q1</a></li>      
+                                <li><a href="assignment9/q2.html">Q2</a></li> 
+                                <li><a href="assignment9/q3.html">Q3</a></li> 
+                            </ul>
                         </li> 
                     </ul>
                 </div>
