index link update

--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -49,7 +49,7 @@
                                 <li><a href="w1d5form/webform2.html">Web Form 2 -  New Product Form</a></li> 
                             </ul>
                         </li>
-                        <li>Lab Assignment 5 - Practice JS Coding Exercise Problems
+                        <li><a href="lab-assignment5/index.html">Lab Assignment 5 - Practice JS Coding Exercise Problems</a>
                             <ul>
                                 <li><a href="lab-assignment5/index.html">Javascript Functions</a></li>      
                                 <li><a href="lab-assignment5/webform1.html">Web Form 1 - Login Form</a></li> 
@@ -58,7 +58,7 @@
                             </ul>
                         </li>
                         <li><a href="assignment7/W2D1-Scopes-Closures-in-JS_Q1-Q5_SuLaiMyint.pdf">Assignment 7 - W2D3 - Scopes, Closures Practice Exercises</a></li>
-                        <li>Assignment 8 - W3D1 - Objects, Modules Practice Exercises
+                        <li><a href="assignment8/q6nq7.html">Assignment 8 - W3D1 - Objects, Modules Practice Exercises</a>
                             <ul>
                                 <li><a href="assignment8/q6nq7.html">Q6 & Q7</a></li>      
                                 <li><a href="assignment8/q8nq9.html">Q8 & Q9</a></li> 
@@ -66,7 +66,7 @@
                                 <li><a href="assignment8/q11.html">Q11</a></li> 
                             </ul>
                         </li>
-                        <li>Assignment 9 - W3D2 - Using Inheritance
+                        <li><a href="assignment9/q1.html">Assignment 9 - W3D2 - Using Inheritance</a>
                             <ul>
                                 <li><a href="assignment9/q1.html">Q1</a></li>      
                                 <li><a href="assignment9/q2.html">Q2</a></li> 
