--- a/miu-study/cs472-WAP/assignment8/q10.html
+++ b/miu-study/cs472-WAP/assignment8/q10.html
@@ -34,7 +34,7 @@
             }
             const setAge = function(newAge){
                 age = newAge;
-                console.log('setAge('+newAge +'): ' + age);
+                console.log('setAge('+newAge +'): ' + getAge());
             }
             const setSalary = function(newSalary){
                 salary = newSalary;
