--- a/miu-study/cs472-WAP/assignment8/q10.html
+++ b/miu-study/cs472-WAP/assignment8/q10.html
@@ -50,7 +50,7 @@
             }
             const incrementAge = function(){
                 age = getAge() + 1;
-                console.log('incrementAge: ' + age);
+                console.log('incrementAge: ' + ageAge());
             }
             return {
                 setAge: setAge,
