--- a/miu-study/cs472-WAP/assignment8/q10.html
+++ b/miu-study/cs472-WAP/assignment8/q10.html
@@ -40,7 +40,7 @@
             }
             const setName = function(newName){
                 name = newName;
-                console.log('setName: ' + name);
+                console.log('setName: ' + getName());
             }
             const increaseSalary = function(percentage){
                 salary += getSalary() * percentage/100;
