--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -72,7 +72,8 @@
                                 <li><a href="assignment9/q2.html">Q2</a></li> 
                                 <li><a href="assignment9/q3.html">Q3</a></li> 
                             </ul>
-                        </li> 
+                        </li>
+                        <li><a href="assignment10/index.html">Assignment 10 - W3D3 - Working with ES6 Classes and ES Module</a></li> 
                     </ul>
                 </div>
             </div>                           
