--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -73,7 +73,9 @@
                                 <li><a href="assignment9/q3.html">Q3</a></li> 
                             </ul>
                         </li>
-                        <li><a href="assignment10/index.html">Assignment 10 - W3D3 - Working with ES6 Classes and ES Module</a></li> 
+                        <li><a href="assignment10/index.html">Assignment 10 - W3D3 - Working with ES6 Classes and ES Module</a></li>
+                        <li><a href="assignment11/index.html">Assignment 11 - W3D4 - Working with the DOM and Event-handling</a></li> 
+                        <li><a href="lesson11-event-delegation/index.html">Lesson 11 - Event Delegation</a></li> 
                     </ul>
                 </div>
             </div>                           
