index update for assgn 12

--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -76,6 +76,7 @@
                         <li><a href="assignment10/index.html">Assignment 10 - W3D3 - Working with ES6 Classes and ES Module</a></li>
                         <li><a href="assignment11/index.html">Assignment 11 - W3D4 - Working with the DOM and Event-handling</a></li> 
                         <li><a href="lesson11-event-delegation/index.html">Lesson 11 - Event Delegation</a></li> 
+                        <li><a href="assignment12/simpleadder-webapp/simpleAdder.html">Assignment 12 - W3D5 - Intro to Node.js</a></li> 
                     </ul>
                 </div>
             </div>                           
