--- a/miu-study/cs472-WAP/index.html
+++ b/miu-study/cs472-WAP/index.html
@@ -77,7 +77,8 @@
                         <li><a href="assignment11/index.html">Assignment 11 - W3D4 - Working with the DOM and Event-handling</a></li> 
                         <li><a href="lesson11-event-delegation/index.html">Lesson 11 - Event Delegation</a></li> 
                         <li><a href="assignment12/simpleadder-webapp/simpleAdder.html">Assignment 12 - W3D5 - Intro to Node.js</a></li>
-                        <li><a href="assignment13/index.js">Assignment 13 - W3D6 - WebApp using NodeJS and ExpressFramework</a></li>  
+                        <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs472-WAP/assignment13">Assignment 13 - W3D6 - WebApp using NodeJS and ExpressFramework</a></li>
+                        <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs472-WAP/assignment14/minibankapp">Assignment 14 - Implement the MiniBank webapp using NodeJS<br>+Express.JS+Database</a></li>    
                     </ul>
                 </div>
             </div>                           
