update waa index

--- a/miu-study/cs545-WAA/index.html
+++ b/miu-study/cs545-WAA/index.html
@@ -28,7 +28,8 @@
                     </div>       
                 </div>
                 <div class="col-8 cnt-main">
-                    <h1 class="mt-5">Hello & Welcome ...</h1>
+                    <h3 class="mt-5">Hello & Welcome ...</h3>
+                    <br/>
                     <p class="lead">This is Su.<br>
 
                         I am a Compro student at Maharishi International University.<br>
@@ -39,7 +40,7 @@
                         
                         Here you will see list of the works that I have done for the course.<br>
                         
-                        Enjoy Browsing! </p>
+                        Enjoy Browsing! <br><br> </p>
                         <div>
                             <ul>
                                 <li><a href="index.html" >W1D1 - Assignment 1 - Home Page</a></li>
