--- a/miu-study/cs545-WAA/index.html
+++ b/miu-study/cs545-WAA/index.html
@@ -43,16 +43,8 @@
                         Enjoy Browsing! <br><br> </p>
                         <div>
                             <ul>
-                                <li><a href="index.html" >W1D1 - Assignment 1 - Home Page</a></li>
-                                <li><a href="about.html">W1D3 - Assignment 2 - About Me</a></li>
-                                <li><a href="w1d2recipe/pie.html">W1D3 - Assignment 2 - Grandma's Lemon Meringue Pie</a></li>
-                                <li><a href="w1d4movie/movie.html">W1D4 - Assignment 3 - CSS Layouts Movie Review</a></li>
-                                <li>W1D5 - Assignment 4 - HTML Forms and RegEx 
-                                    <ul>
-                                        <li><a href="w1d5form/webform1.html">Web Form 1 - Login Form</a></li>      
-                                        <li><a href="w1d5form/webform2.html">Web Form 2 -  New Product Form</a></li> 
-                                    </ul>
-                                </li>
+                                <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab1"  >Lab 1 - Restful Web Services</a></li>
+                                
                             </ul>
                         </div>
                         
