--- a/miu-study/cs545-WAA/index.html
+++ b/miu-study/cs545-WAA/index.html
@@ -44,6 +44,7 @@
                         <div>
                             <ul>
                                 <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab1"  >Lab 1 - Restful Web Services</a></li>
+                                <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab2"  >Lab 2 - Spring Data & Hibernate</a></li>
                                 
                             </ul>
                         </div>
