--- a/miu-study/cs545-WAA/index.html
+++ b/miu-study/cs545-WAA/index.html
@@ -44,8 +44,8 @@
                         <div>
                             <ul>
                                 <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab1"  >Lab 1 - Restful Web Services</a></li>
-                                <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab2"  >Lab 2 - Spring Data & Hibernate</a></li>
-                                
+                                <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab2"  >Lab 2 - Spring Data Part 1 - Entity JPA Hibernate</a></li>
+                                <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab3"  >Lab 3 - Spring Data Part 2 - Entity JPA Hibernate</a></li>
                             </ul>
                         </div>
                         
