--- a/miu-study/cs545-WAA/index.html
+++ b/miu-study/cs545-WAA/index.html
@@ -48,6 +48,8 @@
                                 <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab3"  >Lab 3 - Spring Data Part 2 - Entity JPA Hibernate</a></li>
                                 <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab4"  >Lab 4 - Spring AOP - Logged to - Logger and Exception </a></li>
                                 <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab5"  >Lab 5 - Spring Security 1 - Authentication JWT </a></li>
+                                <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab6"  >Lab 6 - Spring Security 2 - Group Work - Authentication JWT Refresh Token </a></li>
+                                <!-- <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab7"  >Lab 7 - React - Student Dashboard </a></li> -->
                             </ul>
                         </div>
                         
