--- a/miu-study/cs545-WAA/index.html
+++ b/miu-study/cs545-WAA/index.html
@@ -50,6 +50,7 @@
                                 <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab5"  >Lab 5 - Spring Security 1 - Authentication JWT </a></li>
                                 <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab6"  >Lab 6 - Spring Security 2 - Group Work - Authentication JWT Refresh Token </a></li>
                                 <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab7"  >Lab 7 - React Introduction - Post Dashboard </a></li>
+                                <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab8"  >Lab 8 - React Axios - Post Dashboard DB Interaction </a></li>
                             </ul>
                         </div>
                         
