--- a/miu-study/cs545-WAA/index.html
+++ b/miu-study/cs545-WAA/index.html
@@ -52,7 +52,7 @@
                                 <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab7"  >Lab 7 - React Introduction - Post Dashboard </a></li>
                                 <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab8"  >Lab 8 - React Axios & Hooks - useState, useEffect - Post Dashboard DB Interaction </a></li>
                                 <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab9"  >Lab 9 - React Hooks - useContext, useRef, useCallback </a></li>
-                                <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab10"  >Lab 10 - React Router - useNavigate, Login with JWT </a></li>
+                                <li><a href="https://github.com/tsulai/tsulai.github.io/tree/master/miu-study/cs545-WAA/lab10"  >Lab 10 - React Router - useNavigate, useParam, Login with JWT </a></li>
                             </ul>
                         </div>
                         
